button align fixed. still missing: fix the modal grid

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -26,10 +26,7 @@ h4 {
     font-weight: 100;
     height: 110px;
 }
-.button-wrapper{
-    display: flex;
-    justify-content: flex-end;
-}
+
 
 li a{
     font-family: 'Manjari', sans-serif;
@@ -73,11 +70,17 @@ h1 {
     padding: 10px;
     width: 90px;
     font-family: 'Manjari', sans-serif;
-      justify-content: flex-end;
+      justify-content: center;
   display: flex;
+
 
 }
 
+.button-wrapper{
+    display: flex;
+    justify-content: flex-end;
+
+}
 
 
 /* for browsers that support GRID, apply the below*/
